<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#E0E0E0">

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/userlocation_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/user_location" />
    
    <LinearLayout 
        android:id="@+id/lat_lon_layout"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
        android:id="@+id/latitude_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"  
        android:textSize="15sp"         
        android:text="@string/latitude_txt" />
        
        <TextView
            android:id="@+id/lati_value" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="35dp"
            android:maxLength="4"
            android:textSize="15sp"
            android:textColor="#000000"/>
        
        <TextView
        android:id="@+id/longtitude_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="40dp"
        android:textSize="15sp"
        android:text="@string/longitude_txt" />
        
         <TextView
            android:id="@+id/long_value" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:maxLength="4"
            android:textSize="15sp"
            android:textColor="#000000"/>
                
    </LinearLayout>
    
    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="5dp"
    android:background="@android:color/background_dark"/>
    
    <!-- Main ListView 
         Always give id value as list(@android:id/list)
    -->
    <ListView
        android:id="@android:id/list"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"/>
</LinearLayout>
